# mikrotik-cli-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
