[project]
name = "mikrotik-cli-mcp"
version = "1.0.0"
description = "MCP server that sends CLI commands to MikroTik RouterOS via SSH"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "asyncssh>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
